--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
 <body>
     <!-- consume a single file bundle -->
+    <img id='output' style="height:auto; width:auto;">
     <script src="./dist/bundle.min.js"></script>
 </body>
 
