--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <body>
     <!-- consume a single file bundle -->
-    <img id='output' style="height:auto; width:auto;">
+    <img id='image' src="./images/sailboat.jpg" alt="Sail Boat">
     <script src="./dist/bundle.min.js"></script>
 </body>
 
