--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
     <!-- consume a single file bundle -->
     <img id='image' src="./images/sailboat.jpg" alt="Sail Boat">
+    <div id="output"></div>
     <script src="./dist/bundle.min.js"></script>
 </body>
 
