--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <body>
     <!-- consume a single file bundle -->
-    <img id='image' src="./images/Play_1291.jpg" alt="Sail Boat">
+    <!-- <img id='image' src="./images/Play_1291.jpg" alt="Sail Boat"> -->
     <div id="output"></div>
     <script src="./dist/bundle.min.js"></script>
 </body>
